# errgo

./: Cargo.toml  README.md  README.tpl
src/: config.rs  data.rs  lib.rs
src/config/: syn_meta.rs
tests/: thiserror.rs
trybuild/fail/: attributes.rs  attributes.stderr  invalid_ident.rs  invalid_ident.stderr  invalid_signature.rs  invalid_signature.stderr  unsupported_macro_args.rs  unsupported_macro_args.stderr
trybuild/pass/: derive_passthrough.rs  empty.rs  err_attr_passthrough.rs  mix.rs  nested.rs  struct_attr_passthrough.rs  structy.rs  tuple.rs  unit.rs  visibility.rs
