[package]
name = "err-as-you-go"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = "0.4.1"
log = "0.4.17"
pretty_env_logger = "0.4.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = { version = "1.0.109", features = ["full", "extra-traits", "visit-mut"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
trybuild = { version = "1.0.79", features = ["diff"] }
