[package]
name = "err-as-you-go"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs" # needed by cargo-readme =P
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
pretty_env_logger = "0.4.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.52"
quote = "1.0.23"
syn = { git = "https://github.com/dtolnay/syn.git", rev = "30287e3", features = [
    "full",
    "visit-mut",
    "extra-traits",
] }

[dev-dependencies]
thiserror = "1.0.39"
pretty_assertions = "1.3.0"
trybuild = { version = "1.0.79", features = ["diff"] }
